# poc-rust-trait-action-result-as-any

./: Cargo.toml
src/: heaters.rs  main.rs
