[package]
name = "poc-rust-traits2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
async-std = "1.12"
async-trait = "0.1.74"

futures = "0.3"
futures-util = "0.3"

num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0.48"


itertools = "0.12.1"

as-any = "0.3.1"
